--- a/_layouts/ngMeditor.html
+++ b/_layouts/ngMeditor.html
@@ -38,7 +38,7 @@
   angular.module("ieditor").controller('EditorCtrl', function ($scope) {
 
     var strVar = "";
-    strVar += "<h1 style=\"text-align: center;\"><b style=\"line-height: 1.5;\">Yet another Medium style editor for AngularJS<\/b><\/h1>";
+    strVar += "<h1 style=\"text-align: center;\"><b style=\"line-height: 1.5;\">Medium style editor for AngularJS<\/b><\/h1>";
     strVar += "<div style=\"text-align: center;\">";
     strVar += " <b style=\"line-height: 1.5;\">using contenteditable API<\/b>";
     strVar += "<\/div>";
